moved back to pygments, and added line numbers

--- a/css/default.css
+++ b/css/default.css
@@ -217,6 +217,7 @@ aside {
     border: 1px dashed #CCC;
     padding: 5px;
     background-color: #F5F5F5;
+    margin-top: 15px;
 }
 
 /* 900px and under */
