--- a/css/pygments.css
+++ b/css/pygments.css
@@ -11,6 +11,10 @@ pre {
 .linenos pre code {
   line-height: 10px;
 }
+.highlighttable {
+  display: block;
+  overflow-x: scroll;
+}
 .highlighttable div.highlight {
   padding-left: 10px;
 }
