--- a/css/pygments.css
+++ b/css/pygments.css
@@ -11,6 +11,17 @@ pre {
 .linenos pre code {
   line-height: 10px;
 }
+.linenos {
+  color: #AFAFAF !important;
+  border-right: 3px solid #6CE26C !important;
+  padding: 0 .5em 0 1em !important;
+}
+div.highlight {
+  border-left: 2px solid #CCC;
+  padding-left: 10px;
+  margin-left: 10px;
+  overflow: hidden;
+}
 .highlighttable div.highlight {
   padding-left: 10px;
 }
@@ -78,9 +89,3 @@ pre .vc { color: #19177C; } /* Name.Variable.Class */
 pre .vg { color: #19177C; } /* Name.Variable.Global */
 pre .vi { color: #19177C; } /* Name.Variable.Instance */
 pre .il { color: #666666; } /* Literal.Number.Integer.Long */
-
-.linenos {
-  color: #AFAFAF !important;
-  border-right: 3px solid #6CE26C !important;
-  padding: 0 .5em 0 1em !important;
-}
