--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ ga_account_id: UA-25301489-1
 
   <!--
     I'm a front-end developer, a JavaScript afficionado, and I like all things web-related.
-    If the mark-up of this page looks hideous, we can blame it on Jekyll.
+    If the mark-up of this page looks hideous, we can blame it on Jekyll.  Enjoy.
      - K. Risk
   -->
   {% if page.keywords %}
