--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@ ga_account_id: UA-25301489-1
 
         <p>
           <img id="me-image" src="http://www.gravatar.com/avatar/4ae8dc54def0eb337f21fe40fa8972db.png" />
-          I'm <strong>Kiro Risk</strong>, a <strong>Web Developer</strong> at LinkedIn.  I work with JavaScript, HTML, CSS, Java, Python, MySQL and a plethora of other programming goodness every day.
+          I'm <strong>Kiro Risk</strong>, a <strong>Software Engineer</strong> at LinkedIn.  I work with JavaScript, HTML, CSS, Java, Python, MySQL, Objective-C and a plethora of other programming goodness every day.
         </p>
 
         <p>I live in Silicon Valley.</p>
