Added money maker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,41 +76,51 @@ ga_account_id: UA-25301489-1
     </div>
 
     <div id="sidebar">
-        <h3>About me</h3>
 
-        <p>
-          <img id="me-image" src="http://www.gravatar.com/avatar/4ae8dc54def0eb337f21fe40fa8972db.png" />
-          I'm <strong>Kiro Risk</strong>, a <strong>Software Engineer</strong> at LinkedIn.  I work with JavaScript, HTML, CSS, Java, Python, MySQL, Objective-C and a plethora of other programming goodness every day.
-        </p>
+      <div id="about-section">
+          <h3>About me</h3>
 
-        <p>I live in Silicon Valley.</p>
+          <p>
+            <img id="me-image" src="http://www.gravatar.com/avatar/4ae8dc54def0eb337f21fe40fa8972db.png" />
+            I'm <strong>Kiro Risk</strong>, a <strong>Software Engineer</strong> at LinkedIn.  I work with JavaScript, HTML, CSS, Java, Python, MySQL, Objective-C and a plethora of other programming goodness every day.
+          </p>
 
-        <p>
-          Questions? Feel free to <a href="mailto:kiro@kiro.me">contact me</a>.
-        </p>
+          <p>I live in Silicon Valley.</p>
 
-        <a href="https://twitter.com/kirorisk" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @kirorisk</a>
-        <script>
-          !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-        </script>
+          <p>
+            Questions? Feel free to <a href="mailto:kiro@kiro.me">contact me</a>.
+          </p>
 
-        <p>
-          <a id="feedrss" title="Subscribe to this blog..." href="http://feeds.feedburner.com/krisk"><img src="/images/rss2.png"/>Subscribe to the RSS feed</a>
-        </p>
+          <a href="https://twitter.com/kirorisk" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @kirorisk</a>
+          <script>
+            !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+          </script>
 
-        <p>
-          <a href="http://www.linkedin.com/in/kirollos">
-            <img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="21" height="16" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />View my LinkedIn profile
-          </a>
-        </p>
+          <p>
+            <a id="feedrss" title="Subscribe to this blog..." href="http://feeds.feedburner.com/krisk"><img src="/images/rss2.png"/>Subscribe to the RSS feed</a>
+          </p>
 
-        <p>
-          <a id="github-account" href="http://www.github.com/krisk" target="_blank" title="Kiro - GitHub">
-            <img src="/images/github.png" width="16" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />GitHub
-          </a>
-        </p>
+          <p>
+            <a href="http://www.linkedin.com/in/kirollos">
+              <img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="21" height="16" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />View my LinkedIn profile
+            </a>
+          </p>
+
+          <p>
+            <a id="github-account" href="http://www.github.com/krisk" target="_blank" title="Kiro - GitHub">
+              <img src="/images/github.png" width="16" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />GitHub
+            </a>
+          </p>
+
+      </div>
+
+      <div id="clarify-section">
+        <iframe class="clarity-widget" data-c-id="8944" frameborder="0" style="border: 0; height: 0"></iframe>
+        <script src="https://clarity.fm/assets/widget_loader.js"></script>
+      </div>
 
     </div>
+
 
     <footer>
       <hr />
