--- a/css/default.css
+++ b/css/default.css
@@ -1,12 +1,10 @@
 body {
     margin-top: 1.0em;
     /*background: url("../images/bg.png") repeat scroll 0 0 transparent;*/
-    color: #333333;
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 16px;
-}
-p {
-    line-height: 140%;
+    font-family: proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 300;
+    color: #484848;
+    line-height: 1.28;
 }
 a {
     color: steelBlue;
