Added job banner

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,10 @@ ga_account_id: UA-25301489-1
       </div>
     </header>
 
+    <div class="banner">
+    <a href="https://www.linkedin.com/company/linkedin/careers">LinkedIn's hiring!</a> I'm looking for passionate and talented engineers to join us in building the next generation of LinkedIn's core networking products, from back-end to front-end. If this sounds like an interesting opportunity, <a href="mailto:krisk@linkedin.com">contact me!</a>
+    </div>
+
     <div id="container">
 
       {{ content }}
