--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ ga_account_id: UA-25301489-1
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>{% if page.title %}{{ page.title }} | {% endif %}K. Risk - JavaScript Refined</title>
+  <title>{% if page.title %}{{ page.title }} | {% endif %}Kiro Risk</title>
   <meta name="author" content="Kirollos Risk" />
   {% if page.summary %}
   <meta name="description" content="{{ page.summary }}">
@@ -26,7 +26,7 @@ ga_account_id: UA-25301489-1
   <meta name="keywords" content="{{ page.keywords }}">
   {% endif %}
 
-  <link rel="alternate" type="application/rss+xml" title="K. Risk - JavaScript Refined" href="/feed.xml" />
+  <link rel="alternate" type="application/rss+xml" title="Kiro Risk" href="/feed.xml" />
   <link href="/css/default.css" rel="stylesheet" type="text/css">
 
   {% for css in page.css %}
